
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*,int) ;

int
check_interface ( char* str )
{
 int i, j, wks = 0, srv = 0, spl = 0, wrg = 0, foo = 0;


 unsigned char wks_uuid[] = "\x98\xd0\xff\x6b\x12\xa1\x10\x36\x98\x33\x46\xc3\xf8\x7e\x34\x5a";
 unsigned char srv_uuid[] = "\xc8\x4f\x32\x4b\x70\x16\xd3\x01\x12\x78\x5a\x47\xbf\x6e\xe1\x88";
 unsigned char spl_uuid[] = "\x78\x56\x34\x12\x34\x12\xcd\xab\xef\x00\x01\x23\x45\x67\x89\xab";
 unsigned char wrg_uuid[] = "\x01\xd0\x8c\x33\x44\x22\xf1\x31\xaa\xaa\x90\x00\x38\x00\x10\x03";

 for ( i = 0; i < 16; i++ )
 {
  j = 0;
  if ( str[120 + i] < 0 )
  {
   if ( ( str[120 + i] + 0x100 ) == wks_uuid[i] )
    { wks++; j = 1; }
   if ( ( str[120 + i] + 0x100 ) == srv_uuid[i] )
    { srv++; j = 1; }
   if ( ( str[120 + i] + 0x100 ) == spl_uuid[i] )
    { spl++; j = 1; }
   if ( ( str[120 + i] + 0x100 ) == wrg_uuid[i] )
    { wrg++; j = 1; }
   if ( j == 0 )
    foo++;
  }
  else
  {
   if ( str[120 + i] == wks_uuid[i] )
    { wks++; j = 1; }
   if ( str[120 + i] == srv_uuid[i] )
    { srv++; j = 1; }
   if ( str[120 + i] == spl_uuid[i] )
    { spl++; j = 1; }
   if ( str[120 + i] == wrg_uuid[i] )
    { wrg++; j = 1; }
   if ( j == 0 )
    foo++;
  }
 }
 if ( wks == 16 )
  return ( 0 );
 else if ( srv == 16 )
  return ( 1 );
 else if ( spl == 16 )
  return ( 2 );
 else if ( wrg == 16 )
  return ( 3 );
 else
 {
  printf ( "there is/are %d invalid byte(s) in the interface UUID!\n", foo );
  return ( -1 );
 }
}
